@@ -1,0 +1,9 @@
+Title: Dashboards: Folder filtered globe dashlets now link to filtered views
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p18
+Date: 1487259167
+Class: fix
+
+
